--- a/roles/nginx-puma/tasks/deploy.yml
+++ b/roles/nginx-puma/tasks/deploy.yml
@@ -1,6 +1,9 @@
 - name: Create deployment directory
   file: path={{deploy_directory}} owner=deploy group=deploy state=directory
 
+- name: Prepare shared directory
+  file: path={{deploy_directory}}/shared owner=deploy group=deploy state=directory
+
 - name: Make shared directories
   file: path={{deploy_directory}}/shared/{{item}} group=deploy owner=deploy state=directory
   with_items:
@@ -10,8 +13,7 @@
     - bundle
     - bin
     - config
-    - config/puma
   tags: shared
 
 - name: Install database.yml
-  template: src=database.yml.j2 dest={{deploy_directory}}/shared/config/database.yml force=yes mode=755 owner=deploy
+  template: src=database.yml.j2 dest={{deploy_directory}}/shared/config/database.yml force=yes mode=755 owner=deploy group=deploy
