--- a/roles/nginx-puma/tasks/nginx.yml
+++ b/roles/nginx-puma/tasks/nginx.yml
@@ -10,6 +10,7 @@
 - name: Remove the app's symlink, if exists
   command: rm -rf /etc/nginx/sites-enabled/{{ app_name }}
 
+  # TODO: use app_name + rails_env
 - name: Configure nginx for the app
   template: src=etc_nginx_sites-available.conf.j2 dest=/etc/nginx/sites-available/{{ app_name }} group=www-data owner=www-data force=yes
 
