--- a/roles/ruby/tasks/main.yml
+++ b/roles/ruby/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 # Ruby from source playbook (https://github.com/jgrowl/ansible-playbook-ruby-from-src)
+
 - name: upgrade
   action: apt update_cache=yes upgrade=yes
 
@@ -23,34 +24,48 @@
     - libsqlite3-dev
     - libxml2-dev
     - libxslt1-dev
+    - ruby2.0-dev
     - curl
 
 - name: Install app dependencies
   action: apt pkg={{item}} state=installed
   with_items:
     - libpq-dev
+    - libmysqlclient-dev
     - nodejs
     - imagemagick
+    - libmagickwand-dev
   tags: package
 
 # Install correct version of ruby from source
-- name: ruby-from-src | ensure directory temporary ruby download directory is present
-  file: state=directory path={{rubyTmpDir}}
+# - name: ruby-from-src | ensure directory temporary ruby download directory is present
+#   file: state=directory path={{ruby_tmp_dir}}
+#   remote_user: $user
+# 
+# - name: ruby-from-src | Download ruby source
+#   get_url: url={{ruby_url}} dest={{ruby_tmp_dir}}
+# 
+# - name: ruby-from-src | ensure ruby is extracted
+#   command: tar -xf {{ruby_compressed_file}} chdir={{ruby_tmp_dir}} creates={{ruby_tmp_path}}
+# 
+# - name: ruby-from-src | ensure ruby is configured
+#   command: ./configure chdir={{ruby_tmp_path}} creates={{ruby_tmp_path}}/Makefile
+# 
+# - name: ruby-from-src | ensure ruby is compiled
+#   command: make chdir={{ruby_tmp_path}} creates={{ruby_tmp_path}}/ruby
+# 
+# - name: ruby-from-src | ensure ruby is installed
+#   command: make install chdir={{ruby_tmp_path}} creates=/usr/local/bin/ruby
+# 
+# - name: Install Bundler
+#   command: gem install bundler --no-rdoc --no-ri
 
-- name: ruby-from-src | Download ruby source
-  get_url: url={{rubyUrl}} dest={{rubyTmpDir}}
+- name: checkout ruby-build
+  git: repo=git://github.com/sstephenson/ruby-build.git dest=/usr/local/src/ruby-build
 
-- name: ruby-from-src | ensure ruby is extracted
-  command: tar -xf {{rubyCompressedFile}} chdir={{rubyTmpDir}} creates={{tmpRubyPath}}
+- name: build ruby-build
+  command: sudo ./install.sh chdir=/usr/local/src/ruby-build creates=/usr/local/bin/ruby-build
 
-- name: ruby-from-src | ensure ruby is configured
-  command: ./configure chdir={{tmpRubyPath}} creates={{tmpRubyPath}}/Makefile
-
-- name: ruby-from-src | ensure ruby is compiled
-  command: make chdir={{tmpRubyPath}} creates={{tmpRubyPath}}/ruby
-
-- name: ruby-from-src | ensure ruby is installed
-  command: make install chdir={{tmpRubyPath}} creates=/usr/local/bin/ruby
-
-- name: Install Bundler
-  command: gem install bundler
+- name: install ruby
+  command: ruby-build {{ ruby_version }} /opt/rubies/{{ ruby_version }}
+  # TODO: vars/defaults.yml to specify rubies
