User ruby-install + chruby

--- a/roles/chruby/tasks/main.yml
+++ b/roles/chruby/tasks/main.yml
@@ -1,16 +1,29 @@
----
-- name: chruby-from-src
-  get_url: url={{ chruby_url }}
-           dest={{ chruby_file }}
+- name: Download ruby-install src archive
+  get_url: url={{ ruby_install_url }}
+           dest={{ ruby_install_archive }}
            force=no
 
-- name: chruby-unpack
-  command: tar -xzf {{ chruby_file }} chdir={{ app_tmp_dir }} creates={{ chruby_tmp_path }}
+- name: Extract ruby-install src
+  command: tar -xzf {{ ruby_install_archive }} chdir={{ ruby_install_src_dir }} creates={{ ruby_install_src_path }}
 
-- name: chruby-install
-  command: make install chdir={{ chruby_tmp_path }} creates=/usr/local/share/chruby/chruby.sh
+- name: Install ruby-install
+  command: make install chdir={{ ruby_install_src_path }} creates=/usr/local/bin/ruby-install
 
-- name: profile.d {{chruby_version}}
+- name: Install ruby
+  command: ruby-install --rubies-dir {{ rubies_dir }} ruby {{ ruby_version }} crerates={{ rubies_dir}}/ruby-{{ ruby-version }}
+
+- name: Download chruby src archive
+  get_url: url={{ chruby_url }}
+           dest={{ chruby_archive }}
+           force=no
+
+- name: Extract chruby src
+  command: tar -xzf {{ chruby_archive }} chdir={{ chruby_src_dir }} creates={{ chruby_src_path }}
+
+- name: Install chruby
+  command: make install chdir={{ chruby_src_path }} creates=/usr/local/share/chruby/chruby.sh
+
+- name: Set chruby profile
   template: src=chruby.sh
             dest=/etc/profile.d/chruby.sh
             owner=root
