--- a/roles/ruby-common/tasks/main.yml
+++ b/roles/ruby-common/tasks/main.yml
@@ -22,7 +22,7 @@
     - libsqlite3-dev
     - libxml2-dev
     - libxslt1-dev
-    - ruby2.0-dev
+    - ruby{{ ruby_dev_version }}-dev
     - curl
 
 - name: Install app dependencies
