--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -7,6 +7,7 @@
 
   roles:
     #- mysql
-    #- ruby
-    #- chruby
+    - ruby-common # currently configure at ruby2.0-dev
+    - chruby
+    - rails
     - nginx-puma
