--- a/create-user.yml
+++ b/create-user.yml
@@ -1,6 +1,5 @@
 ---
 - hosts: all
-  user: root
   vars_files:
     - vars/defaults.yml
 
@@ -20,3 +19,36 @@
         regexp='^{{ deploy_user }} ALL'
         line='{{ deploy_user }} ALL=(ALL) NOPASSWD: ALL'
         state=present"
+
+    - name: Disallow root SSH access
+      lineinfile:
+        dest=/etc/ssh/sshd_config
+        regexp="^PermitRootLogin"
+        line="PermitRootLogin no"
+        state=present
+      notify:
+        - restart sshd
+
+    - name: Disallow SSH password authentication
+      lineinfile:
+        dest=/etc/ssh/sshd_config
+        regexp="^PasswordAuthentication"
+        line="PasswordAuthentication no"
+        state=present
+      notify:
+        - restart sshd
+
+    - name: Disallow SSH GSS API authentication
+      lineinfile:
+        dest=/etc/ssh/sshd_config
+        regexp="^GSSAPIAuthentication"
+        line="GSSAPIAuthentication no"
+        state=present
+      notify:
+        - restart sshd
+
+  handlers:
+  - name: restart sshd
+    service:
+      name=sshd
+      state=restarted
