--- a/roles/rails/tasks/main.yml
+++ b/roles/rails/tasks/main.yml
@@ -1,11 +1,11 @@
 - name: Create deployment directory
-  file: path={{deploy_directory}} owner=deploy group=deploy state=directory
+  file: path={{deploy.directory}} owner={{deploy.user}} group={{deploy.group}} state=directory
 
 - name: Prepare shared directory
-  file: path={{deploy_directory}}/shared owner=deploy group=deploy state=directory
+  file: path={{deploy.directory}}/shared owner={{deploy.user}} group={{deploy.group}} state=directory
 
 - name: Make shared directories
-  file: path={{deploy_directory}}/shared/{{item}} group=deploy owner=deploy state=directory
+  file: path={{deploy.directory}}/shared/{{item}} owner={{deploy.user}} group={{deploy.group}} state=directory
   with_items:
     - tmp
     - log
@@ -16,4 +16,13 @@
   tags: shared
 
 - name: Install database.yml
-  template: src=database.yml.j2 dest={{deploy_directory}}/shared/config/database.yml force=yes mode=755 owner=deploy group=deploy
+  template: src=database.yml.j2 dest={{deploy.directory}}/shared/config/database.yml force=yes mode=755 owner={{deploy.user}} group={{deploy.group}}
+
+- name: Install secrets.yml
+  template: src=secrets.yml.j2 dest={{deploy.directory}}/shared/config/secrets.yml force=yes mode=755 owner={{deploy.user}} group={{deploy.group}}
+
+- name: Install .env # If you are using dotenv
+  template: src=.env.j2 dest={{deploy.directory}}/shared/.env force=yes mode=755 owner={{deploy.user}} group={{deploy.group}}
+
+
+# cp shared/.env, shared/config/secrets.yml
