--- a/roles/ruby-common/tasks/main.yml
+++ b/roles/ruby-common/tasks/main.yml
@@ -1,7 +1,4 @@
 ---
-- name: upgrade
-  action: apt update_cache=yes upgrade=yes
-
 - name: install ruby dependencies
   action: apt pkg={{item}} state=installed
   with_items:
@@ -15,15 +12,22 @@
     - openssl
     - libssl-dev
     - curl
+    - libcurl4-openssl-dev
     - git-core
     - zlib1g
     - zlib1g-dev
+    - libssl-dev
     - libyaml-dev
     - libsqlite3-dev
     - libxml2-dev
     - libxslt1-dev
-    - ruby{{ ruby_dev_version }}-dev
-    - curl
+    - libc6-dev
+    - libncurses5-dev
+    - ruby{{ ruby.dev_version }}-dev
+    - python-software-properties
+    - apt-transport-https
+    - ca-certificates
+    - monit
 
 - name: Install app dependencies
   action: apt pkg={{item}} state=installed
