--- a/create-user.yml
+++ b/create-user.yml
@@ -1,23 +1,24 @@
 ---
 - hosts: all
+  sudo: true
   vars_files:
     - vars/defaults.yml
 
   tasks:
     - name: Add the deploy user
-      user: name={{ deploy_user }}
-            home=/home/{{ deploy_user }}
+      user: name={{ deploy.user }}
+            home=/home/{{ deploy.user }}
             shell=/bin/bash
             comment="Deploy User"
             groups=sudo
 
-    - authorized_key: user={{ deploy_user }} key="{{ pubkey_path }}"
+    - authorized_key: user={{ deploy.user }} key="{{ pubkey_path }}"
 
     - name: Add user remote to sudoers
       lineinfile:
         "dest=/etc/sudoers
-        regexp='^{{ deploy_user }} ALL'
-        line='{{ deploy_user }} ALL=(ALL) NOPASSWD: ALL'
+        regexp='^{{ deploy.user }} ALL'
+        line='{{ deploy.user }} ALL=(ALL) NOPASSWD: ALL'
         state=present"
 
     - name: Disallow root SSH access
