--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -6,12 +6,12 @@
     - python-mysqldb
 
 - name: Copy the my.cnf file
-  template: src=my.cnf.j2 dest={{ mysql_conf_dir }}/my.cnf
-  notify: 
+  template: src=my.cnf.j2 dest={{ mysql.conf_dir }}/my.cnf
+  notify:
    - restart mysql
 
 - name: update mysql root password for all root accounts
-  mysql_user: name=root host={{ item }} password={{ mysql_root_db_pass }}
+  mysql_user: name=root host={{ item }} password={{ mysql.root_db_pass }}
   with_items:
    - 127.0.0.1
    - ::1
@@ -25,13 +25,13 @@
   with_items:
    - localhost
 
-- name: Create the database's
+- name: Create the databases
   mysql_db: name={{ item.name }} state=present
-  with_items: mysql_db
-  when: mysql_db|lower() != 'none'
+  with_items: mysql.db
+  when: mysql.db|lower() != 'none'
 
 - name: Create the database users
   mysql_user: name={{ item.name }}  password={{ item.password }}
                 priv={{ item.priv|default("*.*:ALL") }} state=present host={{ item.host }}
-  with_items: mysql_users
-  when: mysql_users|lower() != 'none'
+  with_items: mysql.users
+  when: mysql.users|lower() != 'none'
