--- a/roles/nginx-puma/tasks/nginx.yml
+++ b/roles/nginx-puma/tasks/nginx.yml
@@ -8,15 +8,14 @@
   command: rm -rf /etc/nginx/sites-enabled/default
 
 - name: Remove the app's symlink, if exists
-  command: rm -rf /etc/nginx/sites-enabled/{{ app_name }}
+  command: rm -rf /etc/nginx/sites-enabled/{{ rails.app }}
 
-  # TODO: use app_name + rails_env
 - name: Configure nginx for the app
-  template: src=etc_nginx_sites-available.conf.j2 dest=/etc/nginx/sites-available/{{ app_name }} group=www-data owner=www-data force=yes
+  template: src=etc_nginx_sites-available.conf.j2 dest=/etc/nginx/sites-available/{{ rails.app }} group=www-data owner=www-data force=yes
 
 - name: Enable the app
-  command: ln -s /etc/nginx/sites-available/{{ app_name }} /etc/nginx/sites-enabled/{{ app_name }}
+  command: ln -s /etc/nginx/sites-available/{{ rails.app }} /etc/nginx/sites-enabled/{{ rails.app }}
 
 - name: Restart nginx
-  action: service name=nginx state=restarted
+  action: service name={{nginx.service}} state=restarted
 
