--- a/roles/sidekiq/tasks/main.yml
+++ b/roles/sidekiq/tasks/main.yml
@@ -1,1 +1,4 @@
-- include: sidekiq.yml tags=sidekiq
+- name: Install sidekiq as a service
+  template: src=sidekiq.conf.j2 dest=/etc/init/sidekiq.conf
+  notify:
+   - restart sidekiq
